# gdrs

./: .gitignore  LICENSE  SCsub  config.py  gdrs-alloc.cpp  gdrs-parse.toml  register_types.cpp  register_types.h  rust_builders.py  rust_script.h  toml.py
gdrs/: Cargo.toml
gdrs-api/: Cargo.toml
gdrs-api/src/: lib.rs
gdrs-host/: Cargo.toml  SCsub  rustc-version
gdrs-host/gdrs-alloc/: Cargo.toml
gdrs-obj/: Cargo.toml
gdrs-obj/src/: lib.rs
gdrs-parse/: Cargo.toml
gdrs-parse/src/: main.rs
gdrs/gdrs_gen/: Cargo.toml
gdrs/gdrs_gen/src/: lib.rs
gdrs/gdrs_macros/: Cargo.toml
gdrs/src/: lib.rs
gdrs_host/: Cargo.toml  SCsub
gdrs_host/gdrs_alloc/: Cargo.toml
gdrs_host/src/: lib.rs
gdrs_obj/: Cargo.toml
gdrs_obj/src/: lib.rs
gdrs_parse/: Cargo.toml
gdrs_parse/src/: main.rs
godot_alloc/: Cargo.toml
godot_alloc/src/: lib.rs
godot_api/: Cargo.toml
godot_api/src/: lib.rs
godot_host/: Cargo.toml  SCsub
godot_host/src/: lib.rs
godot_macros/: Cargo.toml
godot_macros/src/: lib.rs
godot_mod/: Cargo.toml
